Post-v2.11.0
---------------------


v2.11.0 - xx xxx xxxx
---------------------
   - Linux datapath:
     * Support for the kernel versions 4.16.x and 4.17.x.
   - OpenFlow:
     * OFPMP_TABLE_FEATURES_REQUEST can now modify table features.
   - ovs-ofctl:
     * "mod-table" command can now change OpenFlow table names.
   - The environment variable OVS_SYSLOG_METHOD, if set, is now used
     as the default syslog method.
   - The environment variable OVS_CTL_TIMEOUT, if set, is now used
     as the default timeout for control utilities.
   - ovn:
     * OVN-SB schema changed: duplicated IP with same Encapsulation type
       is not allowed any more.  Please refer to
       Documentation/intro/install/ovn-upgrades.rst for the instructions
       in case there are problems encountered when upgrading from an earlier
       version.
     * New support for IPSEC encrypted tunnels between hypervisors.
     * ovn-ctl: allow passing user:group ids to the OVN daemons.
     * IPAM/MACAM:
       - add the capability to dynamically assign just L2 addresses
       - add the capability to specify a static ip address and get the L2 one
         allocated dynamically using the following syntax:
           ovn-nbctl lsp-set-addresses <port> "dynamic <IP>"
   - DPDK:
     * Add support for DPDK 18.11
     * Add support for port representors.
   - Userspace datapath:
     * Add option for simple round-robin based Rxq to PMD assignment.
       It can be set with pmd-rxq-assign.
     * Add support for Auto load balancing of PMDs (experimental)
     * Added new per-port configurable option to manage EMC:
       'other_config:emc-enable'.
   - Add 'symmetric_l3' hash function.
   - OVS now honors 'updelay' and 'downdelay' for bonds with LACP configured.
   - ovs-vswitchd:
     * New configuration option "offload-rebalance", that enables dynamic
       rebalancing of offloaded flows.
   - The environment variable OVS_RESOLV_CONF, if set, is now used